syntax = "proto3";
package delegationcontrol.fdpd;

import "gogoproto/gogo.proto";
import "fdpd/params.proto";
import "fdpd/local_domain.proto";
import "fdpd/domain.proto";
import "fdpd/forward_policy.proto";
import "fdpd/validity.proto";
import "fdpd/decision_policy.proto";
import "fdpd/permission.proto";
import "fdpd/delegation_conditions.proto";
import "fdpd/delegation_decision.proto";
import "fdpd/selection_policy.proto";
import "fdpd/selection_criteria.proto";
import "fdpd/delegation_request.proto";
import "fdpd/final_delegation_decision.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "delegationcontrol/x/fdpd/types";

// GenesisState defines the fdpd module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  LocalDomain localDomain = 3;
  repeated Domain domainList = 4 [(gogoproto.nullable) = false];
  uint64 domainCount = 5;
  ForwardPolicy forwardPolicy = 6;
  repeated Validity validityList = 7 [(gogoproto.nullable) = false];
  uint64 validityCount = 8;
  DecisionPolicy decisionPolicy = 9;
  repeated Permission permissionList = 10 [(gogoproto.nullable) = false];
  uint64 permissionCount = 11;
  repeated DelegationConditions delegationConditionsList = 12 [(gogoproto.nullable) = false];
  uint64 delegationConditionsCount = 13;
  repeated DelegationDecision delegationDecisionList = 14 [(gogoproto.nullable) = false];
  uint64 delegationDecisionCount = 15;
  SelectionPolicy selectionPolicy = 16;
  repeated SelectionCriteria selectionCriteriaList = 17 [(gogoproto.nullable) = false];
  uint64 selectionCriteriaCount = 18;
  repeated DelegationRequest delegationRequestList = 19 [(gogoproto.nullable) = false];
  uint64 delegationRequestCount = 20;
  repeated FinalDelegationDecision finalDelegationDecisionList = 21 [(gogoproto.nullable) = false];
  uint64 finalDelegationDecisionCount = 22;
  // this line is used by starport scaffolding # genesis/proto/state
}
